# procgenquest

./: README.md  pyproject.toml
procgenquest/: generator.py  generators.py  main.py  quest.py  widgets.py
resources/: app.css
