[tool.poetry]
name = "procgenquest"
version = "0.1.0"
description = "A procedurally generated CLI based RPG"
authors = ["Ash Griffiths <46426454+AshGriffiths@users.noreply.github.com>"]
license = "Unlicense"
readme = "README.md"

[tool.poetry.scripts]
procgenquest = "procgenquest.main:app"

[tool.poetry.dependencies]
python = "^3.11"
textual = "*"
rich = "*"
typer = "*"
shellingham = "*"

[tool.poetry.group.dev.dependencies]
pytest = "*"
black = "*"
flake8 = "*"
mypy = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
